# pcom

./: .gitignore  CMakeLists.txt  README.md
cmake/: googletest-download.cmake
examples/: CMakeLists.txt
examples/cpp/: CMakeLists.txt
examples/cpp/ipc/src/: consumer.cpp  producer.cpp
examples/cpp/kcom/: CMakeLists.txt
examples/cpp/kcom/src/: controller.cpp  robot.cpp
examples/cpp/tcp/: CMakeLists.txt
examples/cpp/tcp/src/: consumer.cpp  producer.cpp
examples/cpp/zmq/: CMakeLists.txt
examples/cpp/zmq/src/: zmq_publisher.cpp  zmq_subscriber.cpp
examples/ipc_posix_circular_buffer_example/: CMakeLists.txt
examples/ipc_posix_circular_buffer_example/src/: consumer.cpp  producer.cpp
examples/pcam/tcp/: CMakeLists.txt
examples/pcam/tcp/src/: usb_cam_producer.cpp  video_consumer.cpp
examples/pypcom/: consumer.py  producer.py
examples/python/ipc/: consumer.py  producer.py
examples/python/soc/: consumer.py  producer.py  socket_consumer.py  socket_publisher.py  socket_publisher_backup.py  start_consumers.bash  video_consumer.py  video_producer.py
examples/python/tcp/: consumer.py  producer.py
examples/python/zmq/: zmq_publisher.py  zmq_subscriber.py
examples/spsc_example/src/: consumer.cpp  producer.cpp
kcom/: CMakeLists.txt
kcom/include/kcom/: kcom_types.h  shared_memory.h
kcom/src/: shared_memory.cpp
pcam/: CMakeLists.txt
pcam/include/pcam/: cam_publisher.h  cam_serialization.h  cam_subscriber.h  pcam_types.h  pcam_utils.h  video_capture.h
pcam/src/: cam_publisher.cpp  cam_subscriber.cpp  video_capture.cpp
pcom/: CMakeLists.txt
pcom/include/pcom/: pcom_circular_buffer.h  pcom_consumer.h  pcom_types.h  pcom_utils.h  spsc_circular_buffer.h
pcom/include/pcom/ipc/: pcom_circular_buffer.h  pcom_consumer.h  pcom_producer.h  pcom_types.h
pcom/include/pcom/tcp/: pcom_tcp_client.h  pcom_tcp_consumer.h  pcom_tcp_producer.h  pcom_tcp_server.h  pcom_tcp_synchronous_client.h  pcom_tcp_synchronous_server.h
pypcom/: CMakeLists.txt
pypcom/src/: pcom_ipc_module.cpp  pcom_module.cpp  pcom_tcp_module.cpp
test/: CMakeLists.txt
test/test_circular_buffer/: CMakeLists.txt  test_circular_buffer.cpp
test/test_producer/: CMakeLists.txt  test_producer.cpp
